--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 			<div class="kotak">
 				<h1 class="ml15">
 					<span class="word">Perkenalkan</span>
-					<span class="word">Namaku ......</span>
+					<span class="word">Namaku Roy Shandi Wahyudi</span>
 				</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-3">
 			<div class="kotak">
-				<h1 class="ml16">(Namamu)</h1>
+				<h1 class="ml16">(Meri Marlina)</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-4">
@@ -61,23 +61,23 @@
 			<div class="kotak">
 				<h1 class="ml9">
 					<span class="text-wrapper">
-						<span class="letters">Aku mau beritahu sesuatu</span>
+						<span class="letters">Aku mau ngomong sama kamu</span>
 					</span>
 				</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-6">
 			<div class="kotak">
-				<h1 class="ml2">Sebenarnya aku</h1>
+				<h1 class="ml2">Kalau aku</h1>
 			</div>
 		</div>
 
 		<div class="halaman halaman-7">
 			<div class="kotak">
 				<h1 class="ml4">
-					<span class="letters letters-1">suka</span>
+					<span class="letters letters-1">sayang</span>
 					<span class="letters letters-2">sama kamu</span>
-					<span class="letters letters-3">(Nama seseorang yang kamu suka)</span>
+					<span class="letters letters-3">(Meri Marlina)</span>
 				</h1>
 			</div>
 		</div>
@@ -112,7 +112,7 @@
 		<div class="halaman halaman-11">
 			<div class="kotak">
 				<img src="gambar/bears-hug-love-you.gif" id="gambar" style="display: none;">
-				<h1 class="ml13">(Nama Seseorang yang kamu suka) ❤</h1>
+				<h1 class="ml13">(Meri Marlina) ❤</h1>
 			</div>
 		</div>
 	</div>
